fix compile errors for user stuff